# cs526_mp2

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  env.sh
pass/: CMakeLists.txt  SLPVectorizer-kdw.cpp  buildTree_rec.casedef  helper-rl.cpp  helper.cpp  helper_static.cpp  readme.md  vectorizeTree_rec.casedef
tests/: add.ll  lit.cfg  opt-commands-with-redirection.sh
tests-curated/: arith-sub.ll  broadcast.ll  cast.ll  cmp_sel.ll  commutativity.ll  different-vec-widths.ll  external_user.ll  external_user_jumbled_load.ll  extract-shuffle.ll  extract.ll  extract_opt_commands.py  extractelement.ll  jumbled-load-multiuse.ll  jumbled-load-shuffle-placement.ll  jumbled-load-used-in-phi.ll  load-bitcast-vec.ll  load-merge.ll  long_chains.ll  long_chains.ll.output  multi_block.ll  multi_block.ll.output  multi_user.ll  odd_store.ll  odd_store.ll.output  opt-run-with-rediction-multiple.sh  opt-runs-with-redirection-avx2.sh  opt-runs-with-redirection-single.sh  phi.ll  phi3.ll
tests-curated-refresults/tests-curated-avx2/: arith-sub.ll.output  different-vec-widths.ll.output  load-bitcast-vec.ll.output
tests-curated-refresults/tests-curated-multiple-commands/: cast.ll.output  opt-run.sh
tests-curated-single-command/: broadcast.ll.output  cast.ll.output  commutativity.ll.output  different-vec-widths.ll.output  external_user_jumbled_load.ll.output  extractelement.ll.output  jumbled-load-shuffle-placement.ll.output  multi_user.ll.output
tests-original/: extract_opt_commands.py  lit.cfg  opt-commands-with-redirection.txt  opt-runs-with-redirection-avx2.txt
(+215 files in other folders)
